--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@ p {
 }
 </style>
 <div class="contact">
-	<p class="name">Raymond King</p>
+	<p class="name">Raymond King1</p>
 	<p class="spacer">-----</p>
-	<a class="website" href="raymondking.com">raymondking.com</a>
+	<a class="website" href="raymondking.com2">raymondking.com3</a>
 </div>
 <div class="contact">
-	<p class="name">Lawrence Harris</p>
+	<p class="name">Lawrence Harris1</p>
 	<p class="spacer">-----</p>
-	<a class="website" href="lawrence.com">lawrence.com</a>
+	<a class="website" href="lawrence.com2">lawrence.com3</a>
 </div>
 <div class="contact">
-	<p class="name">Christine Martinez</p>
+	<p class="name">Christine Martinez1</p>
 	<p class="spacer">-----</p>
-	<a class="website" href="christinephotos.io">christinephotos.io</a>
+	<a class="website" href="christinephotos.io2">christinephotos.io3</a>
 </div>
